# pograma

./: .gitignore  .travis.yml  LICENSE  README.md  agil.yaml  maskfile.md  pyproject.toml
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: comprueba_yaml.yaml
HU/: HU.md  README.md
app/: __init__.py  asgi.py  config.py  dependencies.py  main.py
app/apirest/: __init__.py  apirest.py
app/apirest/notion/: __init__.py  errors.py
app/apirest/weather/: __init__.py  errors.py
app/notion/: __init__.py  dashboard.py  errors.py
app/weather/: __init__.py  entities.py  routes.py
tests/weather/: test_weather_service.py
