[tool.poetry]
name = "tyempo"
version = "0.1.0"
description = "A weather information provider for Notion dashboards"
authors = ["Cristobal Contreras <crisconru@gmail.com>, Jose Rivera <josemrivera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
mypy = "^0.812"
black = "^20.8b1"
pytest = "^6.2.2"

[tool.poetry.scripts]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
